--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen-types": "supabase gen types typescript --project-id tfagktiuhrtpkdvtmpjt > database.types.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
+    "@tanstack/react-query": "^5.59.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "supabase": "^1.200.3",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
